--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseurl = "http://humboldtux.github.io/sbcb-demo"
+baseurl = "http://coolpanda.github.io/sbcb-demo"
 title = "Start Bootstrap Clean Blog"
 canonifyurls = true
 paginate = 10
